docs/api/qiskit/0.19/qiskit.providers.aer.noise.QuantumError.md
---
title: QuantumError
description: API reference for qiskit.providers.aer.noise.QuantumError
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.aer.noise.QuantumError
---

# QuantumError

<span id="qiskit.providers.aer.noise.QuantumError" />

`QuantumError(noise_ops, number_of_qubits=None, standard_gates=True, atol=1e-08)` [GitHub](https://github.com/qiskit/qiskit-aer/tree/stable/0.5/qiskit/providers/aer/noise/errors/quantum_error.py "view source code")

Quantum error class for Qiskit Aer noise model

**WARNING: The init interface for this class is not finalized and may**

change in future releases. For maximum backwards compatibility use the QuantumError generating functions in the noise.errors module.

Create a quantum error for a noise model.

Noise ops may either be specified as list of Kraus operators for a general CPTP map, or as a list of `(circuit, p)` pairs where `circuit` is a qobj circuit for the noise, and `p` is the probability of the error circuit. If the input is Kraus operators they will be converted to the circuit format, with checks applied for determining if any Kraus operators are unitary matrices.

**Example**

An example noise\_ops for a bit-flip error with error probability `p = 0.1` is:

```python
noise_ops = [([{"name": "id", "qubits": 0}], 0.9),
             ([{"name": "x", "qubits": 0}], 0.1)]
```

The same error represented as a Kraus channel can be input as:

```python
noise_ops = [np.sqrt(0.9) * np.array([[1, 0], [0, 1]]),
             np.sqrt(0.1) * np.array([[0, 1], [1, 0]])]
```

**Parameters**

*   **noise\_ops** (*list*) – A list of noise ops. See additional information.
*   **number\_of\_qubits** (*int*) – specify the number of qubits for the error. If None this will be determined automatically (default None).
*   **standard\_gates** (*bool*) – Check if input matrices are standard gates.
*   **atol** (*double*) – Threshold for testing if probabilities are equal to 0 or 1 (Default: 1e-8).

**Raises**

**NoiseError** – If input noise\_ops are not a CPTP map.

## Attributes

### atol

The default absolute tolerance parameter for float comparisons.

### circuits

Return the list of error circuits.

### number\_of\_qubits

Return the number of qubits for the error.

### probabilities

Return the list of error probabilities.

### rtol

The relative tolerance parameter for float comparisons.

### size

Return the number of error circuit.

## Methods

### \_\_mul\_\_

<span id="qiskit.providers.aer.noise.QuantumError.__mul__" />

`QuantumError.__mul__(other)` [GitHub](https://github.com/qiskit/qiskit-aer/tree/stable/0.5/qiskit/providers/aer/noise/errors/quantum_error.py "view source code")

### compose

<span id="qiskit.providers.aer.noise.QuantumError.compose" />

`QuantumError.compose(other, front=False)` [GitHub](https://github.com/qiskit/qiskit-aer/tree/stable/0.5/qiskit/providers/aer/noise/errors/quantum_error.py "view source code")

Return the composition error channel other \* self.

Note that for front=True this is equivalent to the [`QuantumError.dot()`](qiskit.providers.aer.noise.QuantumError#dot "qiskit.providers.aer.noise.QuantumError.dot") method.

**Parameters**

*   **other** ([*QuantumError*](qiskit.providers.aer.noise.QuantumError "qiskit.providers.aer.noise.QuantumError")) – a quantum error channel.
*   **front** (*bool*) – If True return the reverse order composation self \* other instead \[default: False].

**Returns**

The composition error channel.

**Return type**

[QuantumError](qiskit.providers.aer.noise.QuantumError "qiskit.providers.aer.noise.QuantumError")

**Raises**

*   **NoiseError** – if other cannot be converted into a QuantumError,
*   **or has incompatible dimensions.** –

### copy

<span id="qiskit.providers.aer.noise.QuantumError.copy" />

`QuantumError.copy()` [GitHub](https://github.com/qiskit/qiskit-aer/tree/stable/0.5/qiskit/providers/aer/noise/errors/quantum_error.py "view source code")

Make a copy of current QuantumError.

### dot

<span id="qiskit.providers.aer.noise.QuantumError.dot" />

`QuantumError.dot(other)` [GitHub](https://github.com/qiskit/qiskit-aer/tree/stable/0.5/qiskit/providers/aer/noise/errors/quantum_error.py "view source code")

Return the composition error channel self \* other.

**Parameters**

**other** ([*QuantumError*](qiskit.providers.aer.noise.QuantumError "qiskit.providers.aer.noise.QuantumError")) – a quantum error channel.

**Returns**

The composition error channel.

**Return type**

[QuantumError](qiskit.providers.aer.noise.QuantumError "qiskit.providers.aer.noise.QuantumError")

**Raises**

*   **NoiseError** – if other cannot be converted into a QuantumError,
*   **or has incompatible dimensions.** –

### error\_term

<span id="qiskit.providers.aer.noise.QuantumError.error_term" />

`QuantumError.error_term(position)` [GitHub](https://github.com/qiskit/qiskit-aer/tree/stable/0.5/qiskit/providers/aer/noise/errors/quantum_error.py "view source code")

Return a single term from the error.

**Parameters**

**position** (*int*) – the position of the error term.

**Returns**

A pair (p, circuit) for error term at position \< size where p is the probability of the error term, and circuit is the list of qobj instructions for the error term.

**Return type**

tuple

**Raises**

*   **NoiseError** – If the position is greater than the size of
*   **the quantum error.** –

### expand

<span id="qiskit.providers.aer.noise.QuantumError.expand" />

`QuantumError.expand(other)` [GitHub](https://github.com/qiskit/qiskit-aer/tree/stable/0.5/qiskit/providers/aer/noise/errors/quantum_error.py "view source code")

Return the tensor product quantum error channel self ⊗ other.

**Parameters**

**other** ([*QuantumError*](qiskit.providers.aer.noise.QuantumError "qiskit.providers.aer.noise.QuantumError")) – a quantum error channel.

**Returns**

the tensor product error channel other ⊗ self.

**Return type**

[QuantumError](qiskit.providers.aer.noise.QuantumError "qiskit.providers.aer.noise.QuantumError")

**Raises**

**NoiseError** – if other cannot be converted to a QuantumError.

### ideal

<span id="qiskit.providers.aer.noise.QuantumError.ideal" />

`QuantumError.ideal()` [GitHub](https://github.com/qiskit/qiskit-aer/tree/stable/0.5/qiskit/providers/aer/noise/errors/quantum_error.py "view source code")

Return True if current error object is an identity

### power

<span id="qiskit.providers.aer.noise.QuantumError.power" />

`QuantumError.power(n)` [GitHub](https://github.com/qiskit/qiskit-aer/tree/stable/0.5/qiskit/providers/aer/noise/errors/quantum_error.py "view source code")

Return the compose of a error channel with itself n times.

**Parameters**

**n** (*int*) – the number of times to compose with self (n>0).

**Returns**

the n-times composition error channel.

**Return type**

[QuantumError](qiskit.providers.aer.noise.QuantumError "qiskit.providers.aer.noise.QuantumError")

**Raises**

**NoiseError** – if the power is not a positive integer.

### set\_atol

<span id="qiskit.providers.aer.noise.QuantumError.set_atol" />

`classmethod QuantumError.set_atol(value)` [GitHub](https://github.com/qiskit/qiskit-aer/tree/stable/0.5/qiskit/providers/aer/noise/errors/quantum_error.py "view source code")

Set the class default absolute tolerance parameter for float comparisons.

### set\_rtol

<span id="qiskit.providers.aer.noise.QuantumError.set_rtol" />

`classmethod QuantumError.set_rtol(value)` [GitHub](https://github.com/qiskit/qiskit-aer/tree/stable/0.5/qiskit/providers/aer/noise/errors/quantum_error.py "view source code")

Set the class default relative tolerance parameter for float comparisons.

### tensor

<span id="qiskit.providers.aer.noise.QuantumError.tensor" />

`QuantumError.tensor(other)` [GitHub](https://github.com/qiskit/qiskit-aer/tree/stable/0.5/qiskit/providers/aer/noise/errors/quantum_error.py "view source code")

Return the tensor product quantum error channel self ⊗ other.

**Parameters**

**other** ([*QuantumError*](qiskit.providers.aer.noise.QuantumError "qiskit.providers.aer.noise.QuantumError")) – a quantum error channel.

**Returns**

the tensor product error channel self ⊗ other.

**Return type**

[QuantumError](qiskit.providers.aer.noise.QuantumError "qiskit.providers.aer.noise.QuantumError")

**Raises**

**NoiseError** – if other cannot be converted to a QuantumError.

### to\_dict

<span id="qiskit.providers.aer.noise.QuantumError.to_dict" />

`QuantumError.to_dict()` [GitHub](https://github.com/qiskit/qiskit-aer/tree/stable/0.5/qiskit/providers/aer/noise/errors/quantum_error.py "view source code")

Return the current error as a dictionary.

### to\_instruction

<span id="qiskit.providers.aer.noise.QuantumError.to_instruction" />

`QuantumError.to_instruction()` [GitHub](https://github.com/qiskit/qiskit-aer/tree/stable/0.5/qiskit/providers/aer/noise/errors/quantum_error.py "view source code")

Convert the QuantumError to a circuit Instruction.

### to\_quantumchannel

<span id="qiskit.providers.aer.noise.QuantumError.to_quantumchannel" />

`QuantumError.to_quantumchannel()` [GitHub](https://github.com/qiskit/qiskit-aer/tree/stable/0.5/qiskit/providers/aer/noise/errors/quantum_error.py "view source code")

Convert the QuantumError to a SuperOp quantum channel.

